# telegram-osint-app

./: .gitignore  Dockerfile  README.md  Readme.md  main.py  pyproject.toml  session_name.session
.github/workflows/: action.yml  docker.yml  helmwave.yml
infrastructure/: helmwave.yml  kafka.values.yml
infrastructure/helm-chart/: Chart.yaml  values.yaml
infrastructure/helm-chart/templates/: deployment-main.yaml  deployment-worker.yaml  deployment.yaml  env-configmap.yaml  env-secret.yaml  imagepullsecret.yaml
src/: app_controller.py  app_module.py  app_service.py  mongo_config.py
src/jobs/: osint_event_handler.py  osint_job.py  region_coordinator.py  region_jobs.py
src/providers/config/: config_module.py  config_service.py
src/providers/cost_calculator/: cost_calculator_module.py
src/providers/cost_calculator/services/: cost_calculator_service.py  model_resolver_service.py  pricing_data_service.py  token_counter_service.py
src/providers/healthchecks/: healthchecks_module.py  healthchecks_service.py
src/providers/logger/: logger_module.py  logger_service.py
src/providers/mongo/: mongo_odm_provider.py
src/providers/openai/: openai_module.py  openai_service.py
src/providers/openai/services/: openai_service.py
src/providers/processors/: processors_model.py  processors_module.py
src/providers/processors/services/: dedup_service.py  llm_pipeline_service.py  ner_service.py  translation_service.py
src/providers/telegram/: channel_constants.py  telegram_document.py  telegram_model.py  telegram_module.py  telegram_mongo_service.py  telegram_service.py
src/taskqueue/: faust.py
src/utils/: channel_encoder.py
