[tool.poetry]
name = "telegramosintapp"
version = "0.1.0"
description = ""
authors = ["itay.dar <itay.dar@lemonade.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pynest-api = "^0.3.1"
telethon = "^1.37.0"
pytz = "^2024.2"
black = "^24.10.0"
openai = "^1.51.2"
uvicorn = "^0.31.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
