[tool.poetry]
name = "telegramosintapp"
version = "0.1.0"
description = ""
authors = ["itay.dar <itay.dar@lemonade.com>"]
readme = "README.md"
packages = [
    {include = "telegramosintapp"}
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pynest-api = "0.3.2"
pytz = "^2024.2"
black = "^24.10.0"
openai = "^1.51.2"
tiktoken = "^0.8.0"
pandas = "^2.2.3"
tqdm = "^4.66.5"
click = "^8.1.6"
scikit-learn = "^1.5.2"
beanie = "^1.27.0"
# Let Poetry resolve the correct versions of these dependencies
# based on what pynest-api requires
python-dotenv = "^1.1.0"
pydantic-settings = "^2.8.1"
aiohttp = "^3.11.14"
telethon = "1.28.5"
cryptography = "^44.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
